Update README.md
example 1