@@ -55,6 +55,10 @@ nbm-maven-plugin home --> http://mojo.codehaus.org/nbm-maven/nbm-maven-plugin
 
 ### Webapp Resources
 
+syntax:
+    
+    same as Maven build/resources
+
 ```xml
     <webappResources>
         <webappResource>
@@ -66,5 +70,33 @@ nbm-maven-plugin home --> http://mojo.codehaus.org/nbm-maven/nbm-maven-plugin
 ### Example 1
 
 ```xml
-
+    <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>nbm-maven-plugin</artifactId>
+        <extensions>true</extensions>
+        <executions>
+            <execution>
+                <goals>
+                    <goal>webstart-app</goal>
+                </goals>
+                <configuration>
+                    <masterJnlpFile>src/main/webstart/${brandingToken}.jnlp</masterJnlpFile>
+                    <masterJnlpFileName>${brandingToken}</masterJnlpFileName>
+                    <generateJnlpApplicationTemplate>true</generateJnlpApplicationTemplate>
+                    <additionalArguments>-J-Xms384m -J-Xmx800m -J-XX:MaxPermSize=256m -J-Djava.util.Arrays.useLegacyMergeSort=true</additionalArguments>
+                    <keystore>${jarsigner.keystore}</keystore>
+                    <keystorealias>${jarsigner.alias}</keystorealias>
+                    <keystorepassword>${jarsigner.storepass}</keystorepassword>
+                    <keystoretype>${jarsigner.storetype}</keystoretype>
+                    <signingRemoveExistingSignatures>true</signingRemoveExistingSignatures>
+                    <signingThreads>8</signingThreads>
+                    <webappResources>
+                        <webappResource>
+                            <directory>src/main/resources</directory>
+                        </webappResource>
+                    </webappResources>
+                </configuration>
+            </execution>
+        </executions>
+    </plugin>
 ```
